[project]
name = "pyseams"
version = "0.0.1"
description = "Python bindings for seams-core"
authors = [
    {name = "Amrita Goswami", email = "amrita16thaug646@gmail.com"},
    {name = "Ruhila S", email = "ruhiresearcher209@gmail.com"},
    {name = "Rohit Goswami", email = "rgoswami@ieee.org"},
]

dependencies = [
    "numpy>=1.26.4",
    "pybind11>=2.12.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
testing = [
    "pytest>=8.3.1",
    "approvaltests>=14.0.0",
    "pytest-approvaltests>=0.2.4",
]
adapters = [
    "ase>=3.23.0",
]
[build-system]
# These are all that are seen by pip install .
requires = ["pybind11", "meson-python", "numpy"]
build-backend = "mesonpy"
# Important, tells pip how to install the package
[tool.meson-python.args]
setup = [
#'-Dwrap_mode=forcefallback',
# ^-- collects subprojects, see https://github.com/ERGO-Code/HiGHS/pull/1343#discussion_r1252446966
]
# Skip during installation to prevent local RPATH stripping issues
# See: https://github.com/mesonbuild/meson-python/discussions/410
install = ['--skip-subprojects']
# Include so auditwheel on the CI can correctly generate wheels
# See: https://github.com/ERGO-Code/HiGHS/pull/1343/files
dist = ['--include-subprojects']

[tool.pdm]
