[project]
name = "pydseamslib"
version = "0.0.2"
description = "Python bindings for seams-core"
authors = [
    {name = "Amrita Goswami", email = "amrita16thaug646@gmail.com"},
    {name = "Ruhila S", email = "ruhiresearcher209@gmail.com"},
    {name = "Rohit Goswami", email = "rgoswami@ieee.org"},
]

dependencies = [
    "numpy>=1.26.4",
    "pybind11>=2.12.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
testing = [
    "pytest>=8.3.1",
    "approvaltests>=14.0.0",
    "pytest-approvaltests>=0.2.4",
]
adapters = [
    "ase>=3.23.0",
]
docs = [
    "sphinx>=8.0.2",
    "myst-parser>=4.0.0",
    "sphinx-contributors>=0.2.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-napoleon>=0.7",
    "sphinx-book-theme>=1.1.3",
    "sphinxcontrib-bibtex>=2.6.2",
]
[build-system]
# These are all that are seen by pip install .
requires = ["pybind11", "meson-python", "numpy"]
build-backend = "mesonpy"
# Important, tells pip how to install the package
[tool.meson-python.args]
setup = [
'-Dwrap_mode=forcefallback',
# ^-- collects subprojects, see https://github.com/ERGO-Code/HiGHS/pull/1343#discussion_r1252446966
]
# Skip during installation to prevent local RPATH stripping issues
# See: https://github.com/mesonbuild/meson-python/discussions/410
install = ['--skip-subprojects']
# Include so auditwheel on the CI can correctly generate wheels
# See: https://github.com/ERGO-Code/HiGHS/pull/1343/files
dist = ['--include-subprojects']

[tool.cibuildwheel]
skip = [ "pp*" ]

[tool.cibuildwheel.linux]
archs = ["auto64"]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
musllinux-x86_64-image = "musllinux_1_2"

[tool.cibuildwheel.macos]
archs = [ "auto64" ]

[tool.cibuildwheel.windows]
archs = [ "auto64" ]

[tool.pdm]
